--- a/templates/fileUploadDownload.html
+++ b/templates/fileUploadDownload.html
@@ -6,50 +6,50 @@
 </head>
 <body>
 <h2>FILE UPLOAD & DOWNLOAD</h2>
-{#<form action="" method="get" enctype="multipart/form-data">#}
+<form action="{% url 'file-details' %}" method="POST" enctype="multipart/form-data">
+   {% csrf_token %}
+   {{ form.as_p }}
+    <button type="submit" name="submit">UPLOAD</button>
+</form>
+
+{# <form action="" method="POST" enctype="multipart/form-data">#}
+{#                #}
+{#        <p class="form-group">#}
+{#            <div class="row">#}
+{#                <div class="col"><input type="text" class="form-control" name="filename" placeholder="File name" required="required"></div>#}
+{#            </div>#}
+{#        </p>#}
 {##}
-{#   {{ fm.as_p }}#}
-{#    <button type="submit" name="submit">UPLOAD</button>#}
-{#</form>#}
-
- <form action="" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-        <p class="form-group">
-            <div class="row">
-                <div class="col"><input type="text" class="form-control" name="filename" placeholder="File name" required="required"></div>
-            </div>
-        </p>
-
-
-         <p class="form-group">
-            <div class="row">
-                <div class="col"><input type="text" class="form-control" name="owner" placeholder="File Owner" required="required"></div>
-            </div>
-        </p>
-
-
-
-         <p class="form-group">
-            <div class="row">
-
-              <div class="col"><label>Choose PDF FIle</label>
-                    <input type="file" id="myFile" name="pdf" placeholder="Report Attachment" enctype="multipart/form-data"></div>
-            </div>
-        </p>
-
-
-         <p class="form-group">
-            <div class="row">
-
-              <div class="col"><label>Choose Cover Image</label>
-                    <input type="file" id="myFile" name="cover" placeholder="Report Attachment" enctype="multipart/form-data"></div>
-            </div>
-        </p>
-
-
-        <p class="form-group">
-            <button type="submit" class="btn btn-success btn-lg btn-block" href="">Add Now</button>
-        </p>
-    </form>
+{##}
+{#         <p class="form-group">#}
+{#            <div class="row">#}
+{#                <div class="col"><input type="text" class="form-control" name="owner" placeholder="File Owner" required="required"></div>#}
+{#            </div>#}
+{#        </p>#}
+{##}
+{##}
+{##}
+{#         <p class="form-group">#}
+{#            <div class="row">#}
+{##}
+{#              <div class="col"><label>Choose PDF FIle</label>#}
+{#                    <input type="file" id="myFile" name="pdf" placeholder="Report Attachment" enctype="multipart/form-data"></div>#}
+{#            </div>#}
+{#        </p>#}
+{##}
+{##}
+{#         <p class="form-group">#}
+{#            <div class="row">#}
+{##}
+{#              <div class="col"><label>Choose Cover Image</label>#}
+{#                    <input type="file" id="myFile" name="cover" placeholder="Report Attachment" enctype="multipart/form-data"></div>#}
+{#            </div>#}
+{#        </p>#}
+{##}
+{##}
+{#        <p class="form-group">#}
+{#            <button type="submit" class="btn btn-success btn-lg btn-block" href="">Add Now</button>#}
+{#        </p>#}
+{#    </form>#}
 </body>
 </html>
