drag n drop partially complete with dropzone

--- a/templates/fileUploadDownload.html
+++ b/templates/fileUploadDownload.html
@@ -4,15 +4,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-{#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">#}
-{#    <!-- Font awesome -->#}
-{#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
-{#    <!-- custom css & js -->#}
-{#    <link rel="stylesheet" href="{% static 'style.css' %}">#}
-{#    <script src="{% static 'main.js' %}" defer></script>#}
-{##}
-{#    <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>#}
-{#    <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">#}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- custom css & js -->
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <script src="{% static 'main.js' %}" defer></script>
+
+    <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+    <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
     <title>FILE UPLOAD</title>
 </head>
 <body>
@@ -61,14 +61,22 @@
 
          <p class="form-group">
             <div class="row">
-
-{# <div class="fallback dropzone" id="my-dropzone">#}
+{#     <form enctype='multipart/form-data' action="{% url 'file-upload/upload' %}" method='POST' class="dropzone dz" id="my-dropzone" >#}
+{#    {% csrf_token %}#}
+{#    <div class="fallback">#}
+{#        <label>Choose pdf debug</label>#}
+{#      <input name="pdf" type="file" multiple/>#}
+{#    </div>#}
+{#</form>#}
+{# </div>#}
+{# <div class="fallback dropzone dz" id="my-dropzone">#}
+{#     {% csrf_token %}#}
+{##}
 {#      <input type="file" name="pdf" id="myFile"  multiple enctype="multipart/form-data"/>#}
 {#    </div>#}
-{# </div>#}
-
-              <div class="col"><label>Choose PDF FIle</label>
-                    <input type="file" id="myFile" name="pdf" placeholder="Report Attachment" enctype="multipart/form-data"></div>
+{##}
+{#              <div class="col"><label>Choose PDF FIle</label>#}
+{#                    <input type="file" id="myFile" name="pdf" placeholder="Report Attachment" enctype="multipart/form-data"></div>#}
             </div>
         </p>
 
@@ -83,9 +91,21 @@
 
 
         <p class="form-group">
-            <button type="submit" class="btn btn-success btn-lg btn-block" href="">Add Now</button>
+            <button type="submit" class="btn btn-success btn-lg btn-block" id="uploadButton" href="">Add Now</button>
         </p>
     </form>
 </div>
+ <div class="row">
+     <form enctype='multipart/form-data' action="{% url 'file-upload/upload' %}" method='POST' class="dropzone dz" id="my-dropzone" >
+    {% csrf_token %}
+    <div class="fallback">
+        <label>Choose pdf debug</label>
+      <input name="pdf" type="file" multiple/>
+    </div>
+</form>
+ </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
