--- a/templates/fileUploadDownload.html
+++ b/templates/fileUploadDownload.html
@@ -95,15 +95,18 @@
         </p>
     </form>
 </div>
- <div class="row">
-     <form enctype='multipart/form-data' action="{% url 'file-upload/upload' %}" method='POST' class="dropzone dz" id="my-dropzone" >
-    {% csrf_token %}
-    <div class="fallback">
-        <label>Choose pdf debug</label>
-      <input name="pdf" type="file" multiple/>
-    </div>
-</form>
- </div>
+<div class="container">
+  <label for="dropzone">PDF Upload</label>
+  <form action=" url file-upload/upload" id="DidDropzone" class="dropzone" accept-charset="UTF-8" method="POST">
+      {% csrf_token %}
+      <div class="dz-message">Click Here or Drop Files Here To Upload - 500kb maximum (0.5mb)</div>
+
+
+  </form>
+  <br>
+
+
+  <button disabled hidden id="image-btn" type="submit" >Add images</button>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
